4. Added backend html

--- a/src/App/View/Admin/Index/dashboard.html
+++ b/src/App/View/Admin/Index/dashboard.html
@@ -1,5 +1,5 @@
 {% extends "back.html" %}
-{% block title %}| Admin{% endblock %}
+{% block title %}Dashboard{% endblock %}
 {% block content %}
     {{ dump(identity) }}
 {% endblock %}
