--- a/src/App/View/front.html
+++ b/src/App/View/front.html
@@ -31,8 +31,8 @@
             <!-- End FAVICON -->
 
             <!-- Begin CSS -->
-            <link type="text/css" rel="stylesheet" href="/assets/css/vendor/reset.css">
-            <link type="text/css" rel="stylesheet" href="/assets/css/vendor/menu.css">
+            <link type="text/css" rel="stylesheet" href="/assets/vendor/reset.css">
+            <link type="text/css" rel="stylesheet" href="/assets/vendor/menu/menu.css">
             <!-- End CSS -->
         {% endblock %}
         <!-- Site CSS -->
@@ -85,13 +85,13 @@
         </div>
         {% block js_footer %}
             <!--[if lt IE 9]>
-                <script src="/assets/js/html5shiv.min.js"></script>
-                <script src="/assets/js/respond.min.js"></script>
+                <script src="/assets/vendor/html5shiv.min.js"></script>
+                <script src="/assets/vendor/respond.min.js"></script>
             <![endif]-->
             <!-- Begin JS -->
-            <script type="text/javascript" src="/assets/js/vendor/jquery-latest.min.js"></script>
-            <script type="text/javascript" src="/assets/js/vendor/jquery-totop.min.js"></script>
-            <script type="text/javascript" src="/assets/js/vendor/menu.min.js"></script>
+            <script type="text/javascript" src="/assets/vendor/jquery-latest.min.js"></script>
+            <script type="text/javascript" src="/assets/vendor/jquery-totop.min.js"></script>
+            <script type="text/javascript" src="/assets/vendor/menu/menu.min.js"></script>
             <!-- End JS -->
         {% endblock %}
         <!-- Site JS -->
