5. Added UI for Users

--- a/src/App/View/Admin/Index/dashboard.html
+++ b/src/App/View/Admin/Index/dashboard.html
@@ -1,5 +1,7 @@
 {% extends "back.html" %}
 {% block title %}Dashboard{% endblock %}
+{% block page_title %}Dashboard{% endblock %}
+{% block dashboard_active %}active{% endblock %}
 {% block content %}
     {{ dump(identity) }}
 {% endblock %}
