--- a/src/App/View/Utils/_search_form.html
+++ b/src/App/View/Utils/_search_form.html
@@ -1,5 +1,5 @@
 {% spaceless %}
-    <form id="search-form" name="search-form" action="{{ urlFor('search', {page: 1}) }}" method="get">
+    <form id="search-form" name="search-form" action="{{ urlFor("search", {page: 1}) }}" method="get">
         <input id="search-text" type="text" name="s" placeholder="Search ...">
         <button id="search-submit" type="submit">Search</button>
     </form>
