--- a/src/App/View/Admin/Index/dashboard.html
+++ b/src/App/View/Admin/Index/dashboard.html
@@ -1,7 +1,55 @@
 {% extends "back.html" %}
 {% block title %}Dashboard{% endblock %}
-{% block page_title %}Dashboard{% endblock %}
 {% block dashboard_active %}active{% endblock %}
 {% block content %}
-    {{ dump(identity) }}
+    <div class="row">
+        <div class="col-lg-3 col-xs-6">
+            <div class="small-box bg-aqua">
+                <div class="inner">
+                    <h3>{{ users }}</h3>
+                    <p>Active Users</p>
+                </div>
+                <div class="icon">
+                    <i class="fa fa-users"></i>
+                </div>
+                <a href="{{ urlFor("intranet.users.list", {page: 1}) }}" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
+        <div class="col-lg-3 col-xs-6">
+            <div class="small-box bg-green">
+                <div class="inner">
+                <h3>{{ pages }}</h3>
+                <p>Published Pages</p>
+                </div>
+                <div class="icon">
+                    <i class="fa fa-file-o"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
+        <div class="col-lg-3 col-xs-6">
+            <div class="small-box bg-yellow">
+                <div class="inner">
+                    <h3>{{ categories }}</h3>
+                    <p>Post Categories</p>
+                </div>
+                <div class="icon">
+                    <i class="fa fa-tags"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
+        <div class="col-lg-3 col-xs-6">
+            <div class="small-box bg-red">
+                <div class="inner">
+                    <h3>{{ posts }}</h3>
+                    <p>Published Posts</p>
+                </div>
+                <div class="icon">
+                    <i class="fa fa-files-o"></i>
+                </div>
+                <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
