--- a/src/App/View/Admin/Users/add.html
+++ b/src/App/View/Admin/Users/add.html
@@ -1,7 +1,72 @@
 {% extends "back.html" %}
 {% block title %}User Add{% endblock %}
-{% block page_title %}Add User{% endblock %}
 {% block users_active %}active{% endblock %}
 {% block content %}
-    {{ dump(identity) }}
+    <div class="row">
+        <div class="col-md-12">
+            <div class="box box-primary">
+                <div class="box-header with-border">
+                    <h3 class="box-title">Add new user</h3>
+                </div>
+                <form name="form-user" id="form-user" method="post" action="{{ urlFor("intranet.users.add") }}">
+                    <div class="box-body">
+                        {% include "Utils/_error_success.html" with {result: message} %}
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <div class="form-group">
+                                    <label for="firstname">First Name</label>
+                                    <input type="text" name="firstname" class="form-control" id="firstname" value="{{ user.firstname }}">
+                                </div>
+                            </div>
+                            <div class="col-xs-6">
+                                <div class="form-group">
+                                    <label for="lastname">Last Name</label>
+                                    <input type="text" name="lastname" class="form-control" id="lastname" value="{{ user.lastname }}">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <div class="form-group">
+                                    <label for="email">Email</label>
+                                    <input type="email" name="email" class="form-control" id="email" value="{{ user.email }}">
+                                </div>
+                            </div>
+                            <div class="col-xs-6">
+                                <div class="form-group">
+                                    <label for="password">Password</label>
+                                    <input type="password" name="password" class="form-control" id="password" value="">
+                                    <p class="help-block">Password must be 8+ alpha/numeric characters long and it must contain at least a number!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <div class="form-group">
+                                    <label for="role">Role</label>
+                                    <select name="role" class="form-control" id="role">
+                                        <option value="ADMIN" {% if user.role == "ADMIN" %}selected="selected"{% endif %}>ADMIN</option>
+                                        <option value="AUTHOR" {% if user.role == "AUTHOR" %}selected="selected"{% endif %}>AUTHOR</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-xs-6">
+                                <div class="form-group">
+                                    <label for="status">Status</label>
+                                    <select name="status" class="form-control" id="status">
+                                        <option value="ACTIVE" {% if user.status == "ACTIVE" %}selected="selected"{% endif %}>ACTIVE</option>
+                                        <option value="INACTIVE" {% if user.status == "INACTIVE" %}selected="selected"{% endif %}>INACTIVE</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="box-footer">
+                        <button type="submit" class="btn btn-primary"><i class="fa fa-floppy-o"></i> Save user</button>
+                        <a class="btn btn-default" href="{{ urlFor("intranet.users.list", {page: 1}) }}"><i class="fa fa-level-up"></i> Go to users</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
