--- a/src/App/View/Admin/Auth/profile.html
+++ b/src/App/View/Admin/Auth/profile.html
@@ -1,14 +1,14 @@
 {% extends "back.html" %}
-{% block title %}User Add{% endblock %}
-{% block users_active %}active{% endblock %}
+{% block title %}Profile{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Add new user</h3>
+                    <h3 class="box-title">Edit profile for &ldquo;{{ user.firstname }} {{ user.lastname }}&rdquo;</h3>
                 </div>
-                <form name="form-user" id="form-user" method="post" action="{{ urlFor("intranet.users.add") }}">
+                <form name="form-user" id="form-user" method="post" action="{{ urlFor("intranet.profile") }}">
+                    <input type="hidden" name="id" value="{{ user.id }}">
                     <div class="box-body">
                         {% include "Utils/_error_success.html" with {result: message} %}
                         <div class="row">
@@ -34,36 +34,15 @@
                             </div>
                             <div class="col-xs-6">
                                 <div class="form-group">
-                                    <label for="password">Password</label>
+                                    <label for="password">New Password</label>
                                     <input type="password" name="password" class="form-control" id="password" value="">
-                                    <p class="help-block">Password must be 8+ alpha/numeric characters long and it must contain at least a number!</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div class="form-group">
-                                    <label for="role">Role</label>
-                                    <select name="role" class="form-control" id="role">
-                                        <option value="ADMIN" {% if user.role == "ADMIN" %}selected{% endif %}>ADMIN</option>
-                                        <option value="AUTHOR" {% if user.role == "AUTHOR" %}selected{% endif %}>AUTHOR</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col-xs-6">
-                                <div class="form-group">
-                                    <label for="status">Status</label>
-                                    <select name="status" class="form-control" id="status">
-                                        <option value="ACTIVE" {% if user.status == "ACTIVE" %}selected{% endif %}>ACTIVE</option>
-                                        <option value="INACTIVE" {% if user.status == "INACTIVE" %}selected{% endif %}>INACTIVE</option>
-                                    </select>
+                                    <p class="help-block">Type the new password if you want to change it!<br>Password must be 8+ alpha/numeric characters long and it must contain at least a number!</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="box-footer">
-                        <button type="submit" class="btn btn-primary"><i class="icon fa fa-floppy-o"></i> Save user</button>
-                        <a class="btn btn-default" href="{{ urlFor("intranet.users.list", {page: 1}) }}"><i class="icon fa fa-level-up"></i> Go to users</a>
+                        <button type="submit" class="btn btn-primary"><i class="icon fa fa-floppy-o"></i> Save profile</button>
                     </div>
                 </form>
             </div>
