--- a/src/App/View/Admin/Slides/list.html
+++ b/src/App/View/Admin/Slides/list.html
@@ -1,15 +1,15 @@
 {% extends "back.html" %}
-{% block title %}Users List{% endblock %}
-{% block users_active %}active{% endblock %}
+{% block title %}Slides List{% endblock %}
+{% block slides_active %}active{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-xs-12">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">CMS Users</h3>
+                    <h3 class="box-title">CMS Frontpage slides</h3>
                     <div class="box-tools">
                         <div class="input-group input-group-sm">
-                            <a class="btn btn-sm btn-success pull-right" href="{{ urlFor("intranet.users.add") }}"><i class="icon fa fa-plus"></i> Add User</a>
+                            <a class="btn btn-sm btn-success pull-right" href="{{ urlFor("intranet.slides.add") }}"><i class="icon fa fa-plus"></i> Add Slide</a>
                         </div>
                     </div>
                 </div>
@@ -20,32 +20,28 @@
                             <thead>
                                 <tr>
                                     <th class="uppercase">ID</th>
-                                    <th class="uppercase">Name</th>
-                                    <th class="uppercase">Email</th>
-                                    <th class="uppercase">Role</th>
+                                    <th class="uppercase">Title</th>
+                                    <th class="uppercase">Thumbnail</th>
                                     <th class="uppercase">Status</th>
-                                    <th class="uppercase">Last login</th>
                                     <th>&nbsp;</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for user in results %}
+                                {% for slide in results %}
                                     <tr>
-                                        <td>{{ user.id }}</td>
-                                        <td>{{ user.firstname }} {{ user.lastname }}</td>
-                                        <td>{{ user.email }}</td>
-                                        <td>{{ user.role }}</td>
+                                        <td>{{ slide.id }}</td>
+                                        <td>{{ slide.title }}</td>
+                                        <td>{{ slide.featured_photo }}</td>
                                         <td>{{ user.status }}</td>
-                                        <td>{{ user.last_login }}</td>
                                         <td>
-                                            <a class="btn btn-sm btn-primary" href="{{ urlFor("intranet.users.edit", {id: user.id}) }}"><i class="icon fa fa-pencil"></i> Edit</a>
-                                            <a class="btn btn-sm btn-danger delete" href="{{ urlFor("intranet.users.delete", {id: user.id}) }}"><i class="icon fa fa-close"></i> Delete</a>
+                                            <a class="btn btn-sm btn-primary" href="{{ urlFor("intranet.slides.edit", {id: slide.id}) }}"><i class="icon fa fa-pencil"></i> Edit</a>
+                                            <a class="btn btn-sm btn-danger delete" href="{{ urlFor("intranet.slides.delete", {id: slide.id}) }}"><i class="icon fa fa-close"></i> Delete</a>
                                         </td>
                                     </tr>
                                 {% endfor %}
                             </tbody>
                         </table>
-                        {% include "Utils/_pagination_admin.html" with {"path": "intranet.users.list"} %}
+                        {% include "Utils/_pagination_admin.html" with {"path": "intranet.slides.list"} %}
                     {% else %}
                         <div class="alert alert-info">
                             <h4><i class="icon fa fa-info"></i> Notification</h4>
