--- a/src/App/View/back.html
+++ b/src/App/View/back.html
@@ -74,11 +74,11 @@
                                 </span>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="#"><i class="fa fa-circle-o"></i> Post Categories</a></li>
-                                <li><a href="#"><i class="fa fa-circle-o"></i> Post</a></li>
+                                <li class="{% block post_categories_active %}{% endblock %}"><a href="{{ urlFor("intranet.categories.list") }}"><i class="fa fa-tag"></i> Post Categories</a></li>
+                                <li class="{% block post_post_active %}{% endblock %}"><a href="#"><i class="fa fa-file-o"></i> Post</a></li>
                             </ul>
                         </li>
-                        <li class="{% block slider_active %}{% endblock %}"><a href="#"><i class="fa fa-photo"></i> <span>Slider</span></a></li>
+                        <li class="{% block slides_active %}{% endblock %}"><a href="{{ urlFor("intranet.slides.list", {page: 1}) }}"><i class="fa fa-photo"></i> <span>Slides</span></a></li>
                         <li class="{% block menu_active %}{% endblock %}"><a href="#"><i class="fa fa-navicon"></i> <span>Menu</span></a></li>
                     </ul>
                 </div>
@@ -108,9 +108,9 @@
             <script type="text/javascript" src="/assets/vendor/fastclick.min.js"></script>
             <script type="text/javascript" src="/assets/vendor/jquery-slimscroll.min.js"></script>
             <!-- End JS -->
-            <!-- Admin Site JS -->
-            <script type="text/javascript" src="/assets/js/intranet.js"></script>
         {% endblock %}
         <script type="text/javascript" src="/assets/vendor/lte/lte.min.js"></script>
+        <!-- Admin Site JS -->
+        <script type="text/javascript" src="/assets/js/intranet.js"></script>
     </body>
 </html>
