8. Added UI for Slides

--- a/public/assets/css/intranet.css
+++ b/public/assets/css/intranet.css
@@ -11,3 +11,4 @@
 .align-center, .center {text-align: center !important;}
  .uppercase {text-transform: uppercase;}
  .table-bordered > tbody > tr >td {vertical-align: middle;}
+ .required {color: #FF0000;}
