--- a/src/App/View/Admin/Slides/list.html
+++ b/src/App/View/Admin/Slides/list.html
@@ -31,8 +31,8 @@
                                     <tr>
                                         <td>{{ slide.id }}</td>
                                         <td>{{ slide.title }}</td>
-                                        <td>{{ slide.featured_photo }}</td>
-                                        <td>{{ user.status }}</td>
+                                        <td><img src="/uploads/{{ slide.featured_photo }}" width="200" title="{{ slide.title }}" alt="{{ slide.title }}"></td>
+                                        <td>{{ slide.status }}</td>
                                         <td>
                                             <a class="btn btn-sm btn-primary" href="{{ urlFor("intranet.slides.edit", {id: slide.id}) }}"><i class="icon fa fa-pencil"></i> Edit</a>
                                             <a class="btn btn-sm btn-danger delete" href="{{ urlFor("intranet.slides.delete", {id: slide.id}) }}"><i class="icon fa fa-close"></i> Delete</a>
