--- a/src/App/View/Admin/Slides/add.html
+++ b/src/App/View/Admin/Slides/add.html
@@ -1,9 +1,10 @@
 {% extends "back.html" %}
 {% block header %}
     {{ parent() }}
-    <!-- Begin Fileinput CSS -->
+    <!-- Begin CSS -->
     <link type="text/css" rel="stylesheet" href="/assets/vendor/fileinput/fileinput.css">
-    <!-- End Fileinput CSS -->
+    <link type="text/css" rel="stylesheet" href="/assets/vendor/cropper/cropper.min.css">
+    <!-- End CSS -->
 {% endblock %}
 {% block title %}Slide Add{% endblock %}
 {% block slides_active %}active{% endblock %}
@@ -15,6 +16,10 @@
                     <h3 class="box-title">Add new slide</h3>
                 </div>
                 <form name="form-slide" id="form-slide" method="post" enctype="multipart/form-data" action="{{ urlFor("intranet.slides.add") }}">
+                    <input type="hidden" id="x" name="x">
+			        <input type="hidden" id="y" name="y">
+			        <input type="hidden" id="w" name="w">
+			        <input type="hidden" id="h" name="h">
                     <div class="box-body">
                         {% include "Utils/_error_success.html" with {result: message} %}
                         <div class="row">
@@ -46,20 +51,19 @@
                                     <label for="featured_photo">Slide <span class="required">*</span></label>
                                     <br>
                                     <div class="fileinput fileinput-new" data-provides="fileinput">
-                                        <div class="fileinput-new thumbnail" style="width:940px; height:350px;">
-                                            <img alt="" src="http://www.placehold.it/940x350/EFEFEF/AAAAAA&text=no+image">
+                                        <div class="fileinput-new thumbnail" style="max-width:700px; max-height:525px;">
+                                            <img alt="" src="http://www.placehold.it/700x525/EFEFEF/AAAAAA&text=no+image">
                                         </div>
-                                        <div class="fileinput-preview fileinput-exists thumbnail" style="width:940px; height:350px;"></div>
+                                        <div id="slide-area-select" class="fileinput-preview fileinput-exists thumbnail" style="max-width:700px; max-height:525px;"></div>
                                         <div>
                                             <span class="btn btn-default btn-file">
                                                 <span class="fileinput-new">Select image</span>
                                                 <span class="fileinput-exists">Change</span>
                                                 <input type="file" name="featured_photo" id="featured_photo">
                                             </span>
-                                            <a href="javascript:;" class="btn btn-danger fileinput-exists" data-dismiss="fileinput">Remove</a>
                                         </div>
                                     </div>
-                                    <p class="help-block">The photo/image must be in the JP(E)G or PNG format and it will be cropped in 940px X 350px</p>
+                                    <p class="help-block">The photo/image must be in the JPG or PNG format and it will be cropped in 940px X 350px</p>
                                 </div>
                             </div>
                         </div>
@@ -75,7 +79,8 @@
 {% endblock %}
 {% block js_footer %}
     {{ parent() }}
-    <!-- Begin Fileinput JS -->
+    <!-- Begin JS -->
     <script type="text/javascript" src="/assets/vendor/fileinput/fileinput.js"></script>
-    <!-- End Fileinput JS -->
+    <script type="text/javascript" src="/assets/vendor/cropper/cropper.min.js"></script>
+    <!-- End JS -->
 {% endblock %}
